--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@import url('https://cdn.jsdelivr.net/gh/sun-typeface/SUIT@2/fonts/variable/woff2/SUIT-Variable.css');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+    @apply font-suit;
+}
